3538 - feat: harden XML security and strengthen test output assertions
       - Add FEATURE_SECURE_PROCESSING to DocumentBuilderFactory in
         CleanOperationStrategy and ElementInjectionHelper
       - Add setValidating(false) to DocumentBuilderFactory in both classes
       - Add ACCESS_EXTERNAL_DTD/STYLESHEET to TransformerFactory with
         try/catch guard for JDK implementations that don't support setAttribute
       - Wrap ByteArrayOutputStream in try-with-resources in postProcess()
       - Narrow catch blocks to re-throw RuntimeException before generic wrapper
       - Add XMLConstants import to ElementInjectionHelper
       - Apply same XML security hardening to test DocumentBuilderFactory
         and serialize() helper in ElementInjectionHelperTest
       - Replace getBytes() with getBytes(StandardCharsets.UTF_8) across all
         three test classes
       - Replace pure interaction-only tests in CleanOperationStrategyTest with
         output-asserting tests that verify actual XML bytes returned:
         - testCleanCitationsRemovesExistingChildrenFromOutput
         - testCleanRecitalsRemovesRecitalElementsPreservesIntroInOutput
         - testCleanEnactingTermsRemovesArticlesPreservesClauseInOutput
         - testRecitalsOutputContainsRenumberedContentAndNoOldRecitals
         - testCitationsOutputIsPassedThroughPostProcessing
         - testEnactingTermsRenumberHigherSubDivisionsCalledForAllFourElementsInOrder
       - Add argThat output assertions to InjectElementServiceImplTest for
         testCleanCitationsSection and testCleanMultipleSections