@@ -7,7 +7,10 @@ import eu.europa.ec.leos.domain.repository.document.XmlDocument;
 import eu.europa.ec.leos.domain.repository.metadata.LeosMetadata;
 import eu.europa.ec.leos.services.document.operation.OperationStrategy;
 import eu.europa.ec.leos.services.document.operation.OperationStrategyFactory;
-import eu.europa.ec.leos.services.dto.request.*;
+import eu.europa.ec.leos.services.dto.request.DocumentLinesRequest;
+import eu.europa.ec.leos.services.dto.request.Operation;
+import eu.europa.ec.leos.services.dto.request.SectionRequest;
+import eu.europa.ec.leos.services.dto.request.SectionType;
 import eu.europa.ec.leos.services.store.WorkspaceService;
 import eu.europa.ec.leos.services.structure.StructureContext;
 import eu.europa.ec.leos.services.structure.lang.DocumentLanguageContext;
@@ -19,7 +22,8 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import jakarta.inject.Provider;
-import java.util.Arrays;
+import java.nio.charset.StandardCharsets;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.contains;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -43,7 +47,7 @@ public class InjectElementServiceImplTest {
         XmlDocument mockDocument = mock(XmlDocument.class);
         Content mockContent = mock(Content.class);
         Content.Source mockSource = mock(Content.Source.class);
-        when(mockSource.getBytes()).thenReturn(xmlContent.getBytes());
+        when(mockSource.getBytes()).thenReturn(xmlContent.getBytes(StandardCharsets.UTF_8));
         when(mockContent.getSource()).thenReturn(mockSource);
         when(mockDocument.getContent()).thenReturn(Option.some(mockContent));
         LeosMetadata mockMetadata = mock(LeosMetadata.class);
@@ -61,6 +65,24 @@ public class InjectElementServiceImplTest {
         return section;
     }
 
+    private XmlDocument setupCitationsRequest() {
+        String xmlContent = "<akomaNtoso><bill><preamble><citations></citations></preamble></bill></akomaNtoso>";
+        XmlDocument mockDocument = mockDocumentWithContent(xmlContent);
+        when(workspaceService.findDocumentByRef("doc123", XmlDocument.class)).thenReturn(mockDocument);
+        when(securityContext.hasPermission(mockDocument, LeosPermission.CAN_UPDATE)).thenReturn(true);
+        when(strategyFactory.getStrategy(Operation.CLEAN)).thenReturn(operationStrategy);
+        when(operationStrategy.execute(any(byte[].class), any(SectionRequest.class), anyString())).thenAnswer(i -> i.getArgument(0));
+        when(structureContextProvider.get()).thenReturn(structureContext);
+        return mockDocument;
+    }
+
+    private DocumentLinesRequest citationsRequest() {
+        DocumentLinesRequest request = new DocumentLinesRequest();
+        request.setDocumentId("doc123");
+        request.setSections(List.of(sectionRequest(SectionType.CITATIONS)));
+        return request;
+    }
+
     @Test
     public void testCleanCitationsSection() throws Exception {
         String xmlContent = "<akomaNtoso><bill><preamble><citations>" +
@@ -76,12 +98,15 @@ public class InjectElementServiceImplTest {
 
         DocumentLinesRequest request = new DocumentLinesRequest();
         request.setDocumentId("doc123");
-        request.setSections(Arrays.asList(sectionRequest(SectionType.CITATIONS)));
+        request.setSections(List.of(sectionRequest(SectionType.CITATIONS)));
 
         injectElementService.injectElements(request);
 
         verify(operationStrategy).execute(any(byte[].class), any(SectionRequest.class), anyString());
-        verify(documentContentService).updateDocument(eq(mockDocument), any(byte[].class), anyString());
+        verify(documentContentService).updateDocument(eq(mockDocument), argThat(bytes -> {
+            String xml = new String(bytes, StandardCharsets.UTF_8);
+            return xml.contains("<citations");
+        }), anyString());
     }
 
     @Test
@@ -100,12 +125,15 @@ public class InjectElementServiceImplTest {
 
         DocumentLinesRequest request = new DocumentLinesRequest();
         request.setDocumentId("doc123");
-        request.setSections(Arrays.asList(sectionRequest(SectionType.CITATIONS), sectionRequest(SectionType.RECITALS)));
+        request.setSections(List.of(sectionRequest(SectionType.CITATIONS), sectionRequest(SectionType.RECITALS)));
 
         injectElementService.injectElements(request);
 
         verify(operationStrategy, times(2)).execute(any(byte[].class), any(SectionRequest.class), anyString());
-        verify(documentContentService).updateDocument(eq(mockDocument), any(byte[].class), anyString());
+        verify(documentContentService).updateDocument(eq(mockDocument), argThat(bytes -> {
+            String xml = new String(bytes, StandardCharsets.UTF_8);
+            return xml.contains("<citations") && xml.contains("<recitals");
+        }), anyString());
     }
 
     @Test
@@ -116,7 +144,7 @@ public class InjectElementServiceImplTest {
 
         DocumentLinesRequest request = new DocumentLinesRequest();
         request.setDocumentId("doc123");
-        request.setSections(Arrays.asList(sectionRequest(SectionType.CITATIONS)));
+        request.setSections(List.of(sectionRequest(SectionType.CITATIONS)));
 
         assertThrows(SecurityException.class, () -> injectElementService.injectElements(request));
     }
@@ -133,77 +161,41 @@ public class InjectElementServiceImplTest {
     public void testInjectElementsThrowsWhenSectionsEmpty() {
         DocumentLinesRequest request = new DocumentLinesRequest();
         request.setDocumentId("doc123");
-        request.setSections(java.util.Collections.emptyList());
+        request.setSections(List.of());
         assertThrows(IllegalArgumentException.class, () -> injectElementService.injectElements(request));
     }
 
     @Test
     public void testDocumentCollectionNamePassedToStrategy() throws Exception {
-        String xmlContent = "<akomaNtoso><bill><preamble><citations></citations></preamble></bill></akomaNtoso>";
-        XmlDocument mockDocument = mockDocumentWithContent(xmlContent);
-        when(workspaceService.findDocumentByRef("doc123", XmlDocument.class)).thenReturn(mockDocument);
-        when(securityContext.hasPermission(mockDocument, LeosPermission.CAN_UPDATE)).thenReturn(true);
-        when(strategyFactory.getStrategy(Operation.CLEAN)).thenReturn(operationStrategy);
-        when(operationStrategy.execute(any(byte[].class), any(SectionRequest.class), anyString())).thenAnswer(i -> i.getArgument(0));
-        when(structureContextProvider.get()).thenReturn(structureContext);
-
-        DocumentLinesRequest request = new DocumentLinesRequest();
-        request.setDocumentId("doc123");
-        request.setSections(Arrays.asList(sectionRequest(SectionType.CITATIONS)));
-
-        injectElementService.injectElements(request);
-
+        setupCitationsRequest();
+        injectElementService.injectElements(citationsRequest());
         verify(operationStrategy).execute(any(byte[].class), any(SectionRequest.class), eq("ANY"));
     }
 
     @Test
     public void testStructureContextAndLanguageContextInitialised() throws Exception {
-        String xmlContent = "<akomaNtoso><bill><preamble><citations></citations></preamble></bill></akomaNtoso>";
-        XmlDocument mockDocument = mockDocumentWithContent(xmlContent);
-        when(workspaceService.findDocumentByRef("doc123", XmlDocument.class)).thenReturn(mockDocument);
-        when(securityContext.hasPermission(mockDocument, LeosPermission.CAN_UPDATE)).thenReturn(true);
-        when(strategyFactory.getStrategy(Operation.CLEAN)).thenReturn(operationStrategy);
-        when(operationStrategy.execute(any(byte[].class), any(SectionRequest.class), anyString())).thenAnswer(i -> i.getArgument(0));
-        when(structureContextProvider.get()).thenReturn(structureContext);
-
-        DocumentLinesRequest request = new DocumentLinesRequest();
-        request.setDocumentId("doc123");
-        request.setSections(Arrays.asList(sectionRequest(SectionType.CITATIONS)));
-
-        injectElementService.injectElements(request);
-
+        setupCitationsRequest();
+        injectElementService.injectElements(citationsRequest());
         verify(structureContext).useDocumentTemplate("BL-023");
         verify(documentLanguageContext).setDocumentLanguage("EN");
     }
 
     @Test
     public void testCommitMessageContainsOperation() throws Exception {
-        String xmlContent = "<akomaNtoso><bill><preamble><citations></citations></preamble></bill></akomaNtoso>";
-        XmlDocument mockDocument = mockDocumentWithContent(xmlContent);
-        when(workspaceService.findDocumentByRef("doc123", XmlDocument.class)).thenReturn(mockDocument);
-        when(securityContext.hasPermission(mockDocument, LeosPermission.CAN_UPDATE)).thenReturn(true);
-        when(strategyFactory.getStrategy(Operation.CLEAN)).thenReturn(operationStrategy);
-        when(operationStrategy.execute(any(byte[].class), any(SectionRequest.class), anyString())).thenAnswer(i -> i.getArgument(0));
-        when(structureContextProvider.get()).thenReturn(structureContext);
-
-        DocumentLinesRequest request = new DocumentLinesRequest();
-        request.setDocumentId("doc123");
-        request.setSections(Arrays.asList(sectionRequest(SectionType.CITATIONS)));
-
-        injectElementService.injectElements(request);
-
+        setupCitationsRequest();
+        injectElementService.injectElements(citationsRequest());
         verify(documentContentService).updateDocument(any(), any(), contains("CLEAN"));
     }
 
     @Test
     public void testInjectElementsWithInvalidDocumentId() {
         when(workspaceService.findDocumentByRef("invalid", XmlDocument.class))
-                .thenThrow(new RuntimeException("Document not found"));
+                .thenThrow(new IllegalArgumentException("Document not found"));
 
         DocumentLinesRequest request = new DocumentLinesRequest();
         request.setDocumentId("invalid");
-        request.setSections(Arrays.asList(sectionRequest(SectionType.CITATIONS)));
+        request.setSections(List.of(sectionRequest(SectionType.CITATIONS)));
 
-        assertThrows(RuntimeException.class, () -> injectElementService.injectElements(request));
+        assertThrows(IllegalArgumentException.class, () -> injectElementService.injectElements(request));
     }
 }
